tests/typing/faulty_indexing_c.sy
start :: fn do
    a :: dict.from_list' [("abc", 1), ("bcd", 2)]
    dict.get(a, "abc") -> maybe.orDefault' 0 + 123
    a[123] + 123
end
// error: Got 'Dict', which it cannot be
